@@ -42,7 +42,7 @@ BEGIN {
         return "test$i.txt";
     }
 
-    use_ok('Win32::SharedFileOpen', qw(:DEFAULT new_fh));
+    use_ok('Win32::SharedFileOpen', qw(:DEFAULT gensym new_fh));
 }
 
 #===============================================================================
@@ -67,7 +67,7 @@ MAIN: {
         is($errno, ENOENT, '... and sets $! correctly');
         is($lasterror, ERROR_FILE_NOT_FOUND, '... and sets $^E correctly');
 
-        $fh = new_fh();
+        $fh = gensym();
         $ret = fsopen($fh, $file, 'w', SH_DENYNO);
         ($errno, $lasterror) = ($!, $^E);
         ok($ret, "fsopen() succeeds with 'w'") or
@@ -105,7 +105,7 @@ MAIN: {
         ok(close($fh), '... and the file closes ok');
         is(-s $file, $strlen + 2, '... and the file size is still ok');
 
-        $fh = new_fh();
+        $fh = gensym();
         $ret = fsopen($fh, $file, 'a', SH_DENYNO);
         ($errno, $lasterror) = ($!, $^E);
         ok($ret, "fsopen() succeeds with 'a'") or
