@@ -2,7 +2,9 @@ Revision history for Perl distribution Win32-SharedFileOpen
 
 4.06 Development
 
-    - TODO
+    - Fix t/06_fsopen_access.t and t/07_sopen_access.t with perl-5.19.1 and
+      earlier: The clearerr() calls don't work on new_fh() style filehandles
+      with perls up to 5.19.1, so use gensym() instead.
 
 4.05 2023-07-02
 
